--- a/오브젝트/ch_2/2. 객체지향 프로그래밍.md
+++ b/오브젝트/ch_2/2. 객체지향 프로그래밍.md
@@ -56,19 +56,77 @@
 
 ![Alt text](image.png)
 
+<br/>
+<br/>
+<br/>
 
 ## 클래스 구현하기
 
 우리는 보통 클래스를 작성할 때 인스턴스 변수 - private, 메서드 - public으로 해서 외부에서 객체의 속성에 직접 접근하지 못하고, 객체의 속성은 public 메서드를 통해서만 변경할 수 있게 만든다.    
 
-**클래스의 내부와 외부를 구분해야 하는 이유**
-- 경계의 명확성이 객체의 자율성을 보장한다. (자율적인 객체)
-- 프로그래머에게 구현의 자유를 제공한다. (프로그래머의 자유)
+### 클래스의 내부와 외부를 구분해야 하는 이유
 
-
-### 자율적인 객체
-- 객체는 **상태(state)**와 **행동(behavior)**을 함께 가지는 복합적인 존재다.
+### 1. 자율적인 객체
+- 경계의 명확성이 객체의 자율성을 보장한다.
+- 객체는 **상태**(state)와 **행동**(behavior)을 함께 가지는 복합적인 존재다.
 - 객체는 스스로 판단하고 행동하는 **자율적인 존재**이다.
+
+#### 캡슐화
+> 데이터와 기능을 객체 내부로 함께 묶고, 접근 제어자를 통해서 외부에서의 접근을 통제하는 것.
+
+#### 객체 내부로의 접근을 통제하는 이유
+> 객체를 **자율적인 존재**로 만들기 위해서이다.    
+
+객체지향의 핵심은 객체가 스스로 상태를 관리하고, 판단하고, 행동하는 자율적인 객체들의 공동체를 구성하는 것인데, 외부에서의 접근을 통제하지 않고 누구든 자유롭게 수정할 수 있게 된다면 객체는 자율성을 잃어버리고, 스스로 의도한 대로 행동 할 수 없기 때문에 결과가 어떻게 나올지 예측할 수 없게 되어버린다.    
+그래서 객체가 자율적인 존재로 존재하기 위해서는 **외부의 간섭을 최소화** 해야 한다.       
+
+일반적으로 클래스의 속성은 private으로 감추고, 외부에 제공해야 하는 일부 메서드만 public으로 선언한다.    
+이렇게 public으로 선언한 것은 퍼블릭 인터페이스(public interface)라고 부르고,     
+private으로 선언한 것은 구현(implementation)이라고 부른다.(객체의 속성도 포함)    
+이 내용을 인터페이스 구현의 분리 원칙(separation of interface and implementation)이라고 부른다.
+
+결론은, 객체의 상태는 숨기고, 외부에 제공해야 하는 일부 메서드만 공개해야한다.
+
+<br/>
+
+### 2. 프로그래머에게 구현의 자유를 제공한다. (프로그래머의 자유)
+#### 역할
+- 클래스 작성자 (class creator) - 새로운 데이터 타입을 프로그램에 추가한다.
+- 클라이언트 프로그래머 (client programmer) - 클래스 작성자가 추가한 데이터 타입을 사용한다.
+
+#### 구현 은닉(impelementation hiding)
+클래스 작성자는 클라이언트 프로그래머에게 필요한 부분만 공개하고, 나머지를 숨김으로써    
+클라이언트 프로그래머가 숨겨놓은 부분에 마음대로 접근할 수 없도록 방지한다.    
+이 덕분에 외부에 영향을 받지 않고도 내부 구현을 마음대로 변경할 수 있는데,    
+이를 **구현 은닉**이라고 부른다.
+
+#### 장점
+- 클래스의 내부와 외부를 명확하게 경계 지어 내부 구현을 은닉할 수 있게 해준다.
+- 클라이언트가 실수로 내부의 숨겨진 부분에 접근하는 것을 막아주며, 실수로 private에 접근하면 컴파일 오류를 뱉어준다.
+- **클라이언트**는 퍼블릭 인터페이스만 알고 있으면 내부 구현을 몰라도 클래스를 사용할 수 있기 때문에 알아야하는 지식의 양이 줄어든다.
+- **클래스 작성자**는 private에 해당하는 부분을 외부에 미치는 영향을 걱정하지 않고 내부의 구현을 자유롭게 수정할 수 있다.
+
+결론은 구현 은닉을 잘 지키면, 각 역할에 맞는 사용자는 서로에 대해 신경쓰지 않고 각자 필요한 책임만 수행할 수 있다.
+
+<br/>
+<br/>
+
+
+## 협력하는 객체들의 공동체
+
+메시지 전송 - 객체가 다른 객체의 공개된 인터페이스에 행동을 수행하도록 요청 하는 것.    
+메시지 수신 - 공개된 인터페이스를 가지고있는 객체가 다른 객체에서 보낸 요청이 도착하는 것.
+
+### 협력(Collaboration)에 관해서..
+> 시스템의 어떤 기능을 구현하기 위해 객체들 사이에 이뤄지는 상호작용.
+
+객체지향 프로그램을 작성할 때는 먼저 **협력**의 관점에서 어떤 객체가 필요한지를 결정하고,    
+공통 상태(state)와 행위(behavior)를 구현하기 위해 클래스를 작성한다.
+
+
+
+
+
 
 
 
